--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -1,7 +1,12 @@
+# in languages.toml
 [[language]]
 name = "python"
-language-servers = [ "basedpyright" ]
-
+language-servers = ["pyright", "ruff"]
+[language-server.pyright.config.python.analysis]
+typeCheckingMode = "basic"
+[language-server.ruff]
+command = "ruff"
+args = ["server"]
 [language.formatter]
 command = "black"
 args = [
