--- a/helix/config.toml
+++ b/helix/config.toml
@@ -5,6 +5,15 @@ theme = "nord"
 true-color = true
 line-number = "relative"
 mouse = false
+end-of-line-diagnostics = "hint"
+
+
+[editor.inline-diagnostics]
+# Minimum severity to show a diagnostic on the primary cursor's line.
+# Note that `cursor-line` diagnostics are hidden in insert mode.
+cursor-line = "error"
+# Minimum severity to show a diagnostic on other lines:
+# other-lines = "error"
 
 [editor.cursor-shape]
 insert = "bar"
